==> RudolphRiedel/FT800-FT813/examples/EVE_Test_STM32_RiTFT50_PlatformIO/src/tft.c <==
#include "EVE.h"
#include "tft_data.h"
#define TEST_UTF8 0
#define RED     0xff0000UL
#define ORANGE  0xffa500UL
#define GREEN   0x00ff00UL
#define BLUE    0x0000ffUL
#define BLUE_1  0x5dade2L
#define YELLOW  0xffff00UL
#define PINK    0xff00ffUL
#define PURPLE  0x800080UL
#define WHITE   0xffffffUL
#define BLACK   0x000000UL
#define MEM_FONT 0x000f7e00 /* the .xfont file for the UTF-8 font is copied here */
#define MEM_LOGO 0x000f8000 /* start-address of logo, needs 6272 bytes of memory */
#define MEM_PIC1 0x000fa000 /* start of 100x100 pixel test image, ARGB565, needs 20000 bytes of memory */
#define MEM_DL_STATIC (EVE_RAM_G_SIZE - 4096) /* 0xff000 - start-address of the static part of the display-list, upper 4k of gfx-mem */
#define LAYOUT_Y1 66

void touch_calibrate(void)
{

/* send pre-recorded touch calibration values, depending on the display the code is compiled for */

#if defined (EVE_CFAF240400C1_030SC)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x0000ed11);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x00001139);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfff76809);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x00000000);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x00010690);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0xfffadf2e);
#endif

#if defined (EVE_CFAF320240F_035T)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x00005614);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x0000009e);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfff43422);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x0000001d);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0xffffbda4);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0x00f8f2ef);
#endif

#if defined (EVE_CFAF480128A0_039TC)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x00010485);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x0000017f);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfffb0bd3);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x00000073);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x0000e293);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0x00069904);
#endif

#if defined (EVE_CFAF800480E0_050SC)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x000107f9);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0xffffff8c);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfff451ae);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x000000d2);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x0000feac);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0xfffcfaaf);
#endif

#if defined (EVE_PAF90)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x00000159);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x0001019c);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfff93625);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x00010157);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x00000000);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0x0000c101);
#endif

#if defined (EVE_RiTFT43)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x000062cd);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0xfffffe45);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfff45e0a);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x000001a3);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x00005b33);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0xFFFbb870);
#endif

#if defined (EVE_EVE2_38)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x00007bed);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x000001b0);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfff60aa5);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x00000095);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0xffffdcda);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0x00829c08);
#endif

#if defined (EVE_EVE2_35G) ||  defined (EVE_EVE3_35G)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x000109E4);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x000007A6);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xFFEC1EBA);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x0000072C);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x0001096A);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0xFFF469CF);
#endif

#if defined (EVE_EVE2_43G) ||  defined (EVE_EVE3_43G)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x0000a1ff);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x00000680);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xffe54cc2);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0xffffff53);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x0000912c);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0xfffe628d);
#endif

#if defined (EVE_EVE2_50G) || defined (EVE_EVE3_50G)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x000109E4);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x000007A6);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xFFEC1EBA);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x0000072C);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x0001096A);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0xFFF469CF);
#endif

#if defined (EVE_EVE2_70G)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x000105BC);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0xFFFFFA8A);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0x00004670);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0xFFFFFF75);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x00010074);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0xFFFF14C8);
#endif

#if defined (EVE_NHD_35)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x0000f78b);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x00000427);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfffcedf8);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0xfffffba4);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x0000f756);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0x0009279e);
#endif

#if defined (EVE_RVT70)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x000074df);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x000000e6);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xfffd5474);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0x000001af);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x00007e79);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0xffe9a63c);
#endif

#if defined (EVE_FT811CB_HY50HD)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 66353);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 712);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 4293876677);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 4294966157);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 67516);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 418276);
#endif

#if defined (EVE_ADAM101)
    EVE_memWrite32(REG_TOUCH_TRANSFORM_A, 0x000101E3);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_B, 0x00000114);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_C, 0xFFF5EEBA);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_D, 0xFFFFFF5E);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_E, 0x00010226);
    EVE_memWrite32(REG_TOUCH_TRANSFORM_F, 0x0000C783);
#endif

/* activate this if you are using a module for the first time or if you need to re-calibrate it */
/* write down the numbers on the screen and either place them in one of the pre-defined blocks above or make a new block */
#if 0
    /* calibrate touch and displays values to screen */
    EVE_cmd_dl(CMD_DLSTART);
    EVE_cmd_dl(DL_CLEAR_RGB | BLACK);
    EVE_cmd_dl(DL_CLEAR | CLR_COL | CLR_STN | CLR_TAG);
    EVE_cmd_text((EVE_HSIZE/2), 50, 26, EVE_OPT_CENTER, "Please tap on the dot.");
    EVE_cmd_calibrate();
    EVE_cmd_dl(DL_DISPLAY);
    EVE_cmd_dl(CMD_SWAP);
    while (EVE_busy()) {};

    uint32_t touch_a, touch_b, touch_c, touch_d, touch_e, touch_f;

    touch_a = EVE_memRead32(REG_TOUCH_TRANSFORM_A);
    touch_b = EVE_memRead32(REG_TOUCH_TRANSFORM_B);
    touch_c = EVE_memRead32(REG_TOUCH_TRANSFORM_C);
    touch_d = EVE_memRead32(REG_TOUCH_TRANSFORM_D);
    touch_e = EVE_memRead32(REG_TOUCH_TRANSFORM_E);
    touch_f = EVE_memRead32(REG_TOUCH_TRANSFORM_F);

    EVE_cmd_dl(CMD_DLSTART);
    EVE_cmd_dl(DL_CLEAR_RGB | BLACK);
    EVE_cmd_dl(DL_CLEAR | CLR_COL | CLR_STN | CLR_TAG);
    EVE_cmd_dl(TAG(0));

    EVE_cmd_text(5, 15, 26, 0, "TOUCH_TRANSFORM_A:");
    EVE_cmd_text(5, 30, 26, 0, "TOUCH_TRANSFORM_B:");
    EVE_cmd_text(5, 45, 26, 0, "TOUCH_TRANSFORM_C:");
    EVE_cmd_text(5, 60, 26, 0, "TOUCH_TRANSFORM_D:");
    EVE_cmd_text(5, 75, 26, 0, "TOUCH_TRANSFORM_E:");
    EVE_cmd_text(5, 90, 26, 0, "TOUCH_TRANSFORM_F:");

    EVE_cmd_setbase(16L);
    EVE_cmd_number(310, 15, 26, EVE_OPT_RIGHTX|8, touch_a);
    EVE_cmd_number(310, 30, 26, EVE_OPT_RIGHTX|8, touch_b);
    EVE_cmd_number(310, 45, 26, EVE_OPT_RIGHTX|8, touch_c);
    EVE_cmd_number(310, 60, 26, EVE_OPT_RIGHTX|8, touch_d);
    EVE_cmd_number(310, 75, 26, EVE_OPT_RIGHTX|8, touch_e);
    EVE_cmd_number(310, 90, 26, EVE_OPT_RIGHTX|8, touch_f);

    EVE_cmd_dl(DL_DISPLAY); /* instruct the co-processor to show the list */
    EVE_cmd_dl(CMD_SWAP); /* make this list active */
    while (EVE_busy()) {};

    while(1);
#endif
}

void initStaticBackground(void)
{
    EVE_cmd_dl(CMD_DLSTART); /* Start the display list */

    EVE_cmd_dl(TAG(0)); /* do not use the following objects for touch-detection */

    EVE_cmd_bgcolor(0x00c0c0c0); /* light grey */

    EVE_cmd_dl(VERTEX_FORMAT(0)); /* reduce precision for VERTEX2F to 1 pixel instead of 1/16 pixel default */

    /* draw a rectangle on top */
    EVE_cmd_dl(DL_BEGIN | EVE_RECTS);
    EVE_cmd_dl(LINE_WIDTH(1*16)); /* size is in 1/16 pixel */

    EVE_cmd_dl(DL_COLOR_RGB | BLUE_1);
    EVE_cmd_dl(VERTEX2F(0,0));
    EVE_cmd_dl(VERTEX2F(EVE_HSIZE,LAYOUT_Y1-2));
    EVE_cmd_dl(DL_END);

    /* display the logo */
    EVE_cmd_dl(DL_COLOR_RGB | WHITE);
    EVE_cmd_dl(DL_BEGIN | EVE_BITMAPS);
    EVE_cmd_setbitmap(MEM_LOGO, EVE_ARGB1555, 56, 56);
    EVE_cmd_dl(VERTEX2F(EVE_HSIZE - 58, 5));
    EVE_cmd_dl(DL_END);

    /* draw a black line to separate things */
    EVE_cmd_dl(DL_COLOR_RGB | BLACK);
    EVE_cmd_dl(DL_BEGIN | EVE_LINES);
    EVE_cmd_dl(VERTEX2F(0,LAYOUT_Y1-2));
    EVE_cmd_dl(VERTEX2F(EVE_HSIZE,LAYOUT_Y1-2));
    EVE_cmd_dl(DL_END);

#if (TEST_UTF8 != 0) && (EVE_GEN > 2)
    EVE_cmd_setfont2(12,MEM_FONT,32); /* assign bitmap handle to a custom font */
    EVE_cmd_text(EVE_HSIZE/2, 15, 12, EVE_OPT_CENTERX, "EVE Demo");
#else
    EVE_cmd_text(EVE_HSIZE/2, 15, 29, EVE_OPT_CENTERX, "EVE Demo");
#endif

    /* add the static text to the list */
#if defined (EVE_DMA)
    EVE_cmd_text(10, EVE_VSIZE - 65, 26, 0, "Bytes:");
#endif
    EVE_cmd_text(10, EVE_VSIZE - 50, 26, 0, "DL-size:");
    EVE_cmd_text(10, EVE_VSIZE - 35, 26, 0, "Time1:");
    EVE_cmd_text(10, EVE_VSIZE - 20, 26, 0, "Time2:");

    EVE_cmd_text(105, EVE_VSIZE - 35, 26, 0, "us");
    EVE_cmd_text(105, EVE_VSIZE - 20, 26, 0, "us");

    while (EVE_busy()) {};

    num_dl_static = EVE_memRead16(REG_CMD_DL);

    EVE_cmd_memcpy(MEM_DL_STATIC, EVE_RAM_DL, num_dl_static);
    while (EVE_busy()) {};
}
